styles(app): fix styles for scrollbar

--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -14,10 +14,11 @@ body {
 * {
   box-sizing: border-box;
   scrollbar-gutter: stable;
+  scrollbar-width: thin;
 }
 
 ::-webkit-scrollbar {
-  width: 4px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
